# coreason-ecosystem

./: .clinerules  .cursorrules  .env.example  .gitattributes  .gitignore  .gitleaks.toml  .gitleaksignore  .pre-commit-config.yaml  .ruff.toml  404.html  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  Dockerfile  ECOSYSTEM_ARCHITECTURE.md  NOTICE  README.md  SECURITY.md  alerts.json  bandit-all.json  bandit-output.json  bandit-tests.json  bench.py  benchmark.py  ci_log.txt  ci_logs_ecosystem.txt  ci_logs_ecosystem_v2.txt  commit_message.txt  conftest.py  index.html  jobs_ecosystem.json  jobs_ecosystem_utf8.json  llms.txt  mkdocs.yml  package-lock.json  package.json  patch_cli.sh  patch_headers.sh  patch_mock.py  pyproject.toml  (+13 more)
.devcontainer/: devcontainer.json
.github/: .gitleaks.toml
.github/workflows/: advanced-security.yml  bandit.yml  ci.yml  codeql.yml  container-scan.yml  docs.yml  fork-monitor.yml  gitleaks.yml  nightly-fuzzing.yml  osv-scanner.yml  publish.yml  release-bootstrapper.yml  release-please.yml  scorecard.yml  security.yml  trivy.yml  zap-dast.yml
LEXICON/: index.html
MCP_PROJECTION_DOCTRINE/: index.html
adr/0001-the-stateless-substrate/: index.html
apps/coreason-cli/: pyproject.toml
bootstrapper/: index.html  package-lock.json  package.json
bootstrapper/src/: App.css  App.tsx
bootstrapper/src-tauri/: Cargo.toml  tauri.conf.json  test_path  test_path.rs  test_resolve.rs  test_tauri.rs
bootstrapper/src-tauri/src/: lib.rs  main.rs  platform.rs  schema.rs
combinatorial_oracle_blueprint/: index.html
docs/: LEXICON.md  MCP_PROJECTION_DOCTRINE.md  combinatorial_oracle_blueprint.md  game_theory_and_markets.md  index.md  lexical_architecture.md  manifesto.md  sovereign_mcp_registry.md  thermodynamic_provisioning.md  topological_data_analysis.md  zero_trust_federation.md
docs/adr/: 0001-macro-orchestrator-boundaries.md  0001-the-stateless-substrate.md
docs/guides/: crystallization.md  healing.md  ignition.md  oracle_loop.md
game_theory_and_markets/: index.html
infrastructure/bare-metal/: Pulumi.yaml  __main__.py
infrastructure/ephemeral/: cloud-init.yaml.tpl
infrastructure/ephemeral/aws_spot/: __main__.py
infrastructure/ephemeral/vast_ai/: __main__.py
infrastructure/helm/coreason-enterprise/: Chart.yaml  artifacthub-repo.yml  values-local.yaml  values.yaml
infrastructure/helm/coreason-mesh/: Chart.yaml  artifacthub-repo.yml  values.yaml
infrastructure/helm/coreason-observability/: Chart.yaml  artifacthub-repo.yml  values.yaml
infrastructure/kubernetes/: chaos-mesh-rbac.yaml  deploy_chaos_mesh.sh
infrastructure/local/: README.md  capabilities.matrix.yaml  compose.yaml  envoy.yaml  otel-collector-config.yaml  redpanda-connect-pipeline.yaml
infrastructure/mainnet/: Pulumi.yaml  __main__.py
infrastructure/observability/prometheus/: prometheus.yml
infrastructure/packer/aws/: swarm-in-a-box.pkr.hcl
infrastructure/pulumi/aws-eks/: Pulumi.yaml  __main__.py
infrastructure/terraform/aws/: main.tf  outputs.tf  variables.tf
infrastructure/wasmcloud/: docker-compose.yaml  nats-server.conf
infrastructure/wasmcloud/wadm/: coreason-gateway.yaml
isv-distribution/bootstrap/: bootstrap-app.yaml  bootstrap-full.yaml
isv-distribution/distr-dashboard/: index.html  package-lock.json  package.json
isv-distribution/docs/: INSTALL.md
isv-distribution/external-secrets/: cluster-secret-store.yaml  external-secrets.yaml
isv-distribution/gitops/: argocd-cm-health-checks.yaml  root.yaml
isv-distribution/gitops/apps/: applicationset-multi-cluster.yaml  applicationset.yaml  mesh.yaml
isv-distribution/gitops/values/: production.yaml  staging.yaml
manifesto/: index.html
scratch/: fix_typos.txt  scaffold.py  scaffold_services.py  test_fastapi_sse.py  test_fastapi_sse2.py  test_master_mcp_real.py  test_master_mcp_real2.py  test_master_mcp_real3.py  test_messages.py  test_request.py  test_request2.py
scripts/: setup_pi.py  validate_registry_lock.py
search/: search_index.json
sovereign_mcp_registry/: index.html
src/coreason_ecosystem/: __init__.py  __main__.py  cli.py  docs_generator.py
src/coreason_ecosystem/auth/: distr_api.py  distr_provisioning.py  identity_manager.py  jwt_compat.py  license_policy.rego  license_validator.py
src/coreason_ecosystem/daemons/: chronometer.py
src/coreason_ecosystem/economics/: bounty_issuer.py  (+2 more)
src/coreason_manifest/: __init__.py  main.py
tests/: __init__.py  benchmark.py  conftest.py  test_build.py  test_chaos.py  test_cli.py  test_cli_docs.py  test_curriculum.py  test_docs_generator.py  test_economics.py  test_fleet_mesh.py  test_fleet_pulumi_actuator.py  test_fleet_servers.py  test_init.py  test_init_topologies.py  test_main.py  test_observability.py  test_orchestration.py  test_registry.py  test_sync.py  test_utils.py  test_web3.py
tests/auth/: test_distr_provisioning.py  test_license_validator.py
tests/e2e_swarm/: conftest.py  docker-compose.e2e.yaml  test_happy_path.py
tests/federation/: test_federation.py
tests/fleet/: __init__.py  test_daemon.py  test_daemon_coverage.py  test_digital_twin.py  test_ephemeral_certs.py  test_etl_actuator.py  test_expansion_loop.py  test_mesh_injector.py  test_pricing_oracle.py  test_pulumi_actuator.py  test_skypilot_actuator.py  test_temporal_monitor.py  test_temporal_monitor_full.py
tests/gateway/: __init__.py  test_capability_registry.py  test_epistemic_filter.py  test_identity_broker.py  test_master_mcp.py  test_ontological_identity_router.py  test_semantic_router.py  test_sovereign_mcp_registry.py  test_state_manifests.py  test_wasmcloud.py
tests/infrastructure/: test_topology_completeness.py
tests/mesh/: test_mesh.py
tests/orchestration/: test_sync.py  test_up.py
tests/storage/: __init__.py  test_storage_mcps.py
tests/unit/: test_cli.py  test_infrastructure.py  test_main.py
thermodynamic_provisioning/: index.html
topological_data_analysis/: index.html
wheels/: coreason_manifest-0.50.13.dev25+gece9adf98-py3-none-any.whl  coreason_manifest-0.50.13.dev34+g9794d0837-py3-none-any.whl
zero_trust_federation/: index.html
(+116 files in other folders)
