[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "coreason_ecosystem"
dynamic = ["version"]
description = "The CoReason AI Swarm Ecosystem Integration Wrapper and Execution Plane"
readme = "README.md"
requires-python = ">=3.14"
authors = [
    { name = "Gowtham A Rao", email = "gowtham.rao@coreason.ai" },
]
dependencies = [
    "coreason-manifest",
    "click>=8.1.7",
    "loguru>=0.7.2",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "httpx>=0.27.0",
    "filelock>=3.25.2",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp-proto-http>=1.20.0",
    "pulumi>=3.149.0",
    "pulumi-aws>=6.66.0",
    "pulumi-command>=1.0.1",
]

license = { file = "LICENSE" }
classifiers = [
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
]

[project.scripts]
coreason = "coreason_ecosystem.cli:main"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.14.14",
    "pre-commit>=4.5.1",
    "pytest-cov>=7.0.0",
    "zensical",
    "mypy>=1.19.1",
    "pytest-asyncio",
    "pytest-benchmark",
    "deptry",
    "deepdiff",
    "hypothesis",
    "syrupy",
    "mkdocstrings-python",
    "mkdocs-material",
    "types-pyyaml>=6.0.12.20250915",
    "tzdata>=2025.3",
    "pytest-xdist>=3.6.1"
]

[tool.hatch.build.targets.wheel]
packages = ["src/coreason_ecosystem"]


[tool.deptry]
ignore = ["DEP002"]

[project.urls]
Homepage = "https://github.com/CoReason-AI/coreason_ecosystem"
Repository = "https://github.com/CoReason-AI/coreason_ecosystem"
Documentation = "https://github.com/CoReason-AI/coreason_ecosystem"

[tool.ruff]
line-length = 120
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "B", "I", "UP", "SIM", "RUF", "ARG", "C4", "PT", "TCH", "FA", "PIE", "RET", "PERF", "FURB", "LOG", "N", "A", "S"]
ignore = ["S101", "TC001", "TC002", "TC003", "UP037", "ARG002"]

[tool.mypy]
python_version = "3.14"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
warn_unused_ignores = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "click.*"
disallow_untyped_decorators = false

[[tool.mypy.overrides]]
module = "typer.*"
disallow_untyped_decorators = false

[[tool.mypy.overrides]]
module = "coreason_manifest.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "opentelemetry.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pydantic_settings.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-n auto --cov=coreason_ecosystem --cov-report=term-missing --cov-report=html --cov-fail-under=100"
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
omit = ["tests/*"]

[tool.hatch.version]
source = "vcs"
