[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "coreason_ecosystem"
dynamic = ["version"]
description = "The CoReason AI Swarm Ecosystem Integration Wrapper and Execution Plane"
readme = "README.md"
requires-python = ">=3.14"
authors = [
    { name = "Gowtham A Rao", email = "gowtham.rao@coreason.ai" },
]
dependencies = [
    "coreason-manifest==0.52.1",
    "click>=8.1.7",
    "loguru>=0.7.2",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "httpx>=0.27.0",
    "filelock>=3.25.2",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp-proto-http>=1.20.0",
    "pulumi>=3.149.0",
    "pulumi-aws>=6.66.0",
    "pulumi-command>=1.0.1",
    "cryptography>=44.0.0",
    "boto3>=1.38.0",
    "prometheus-client>=0.21.0",
    "temporalio>=1.9.0",
    "pyarrow>=19.0.0",
    "mcp>=1.27.0",
    "fastapi>=0.135.3",
    "pyyaml>=6.0.2",
    "networkx>=3.0",
]

license = { file = "LICENSE" }
classifiers = [
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
vectordb = [
    "lancedb>=0.20.0",
]

[project.scripts]
coreason-ecosystem = "coreason_ecosystem.cli:main"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.14.14",
    "pre-commit>=4.5.1",
    "pytest-cov>=7.0.0",
    "zensical",
    "mypy>=1.19.1",
    "pytest-asyncio",
    "pytest-benchmark",
    "deptry",
    "deepdiff",
    "hypothesis",
    "syrupy",
    "mkdocstrings-python",
    "mkdocs-material",
    "types-pyyaml>=6.0.12.20250915",
    "tzdata>=2025.3",
    "pytest-xdist>=3.6.1",
    "pandas-stubs>=3.0.0.260204",
    "pandas>=2.0.0",
    "boto3-stubs[ec2,s3]>=1.42.89",
    "types-protobuf>=6.32.1.20260221",
    "moto>=5.1.22",
]

[tool.hatch.build.targets.wheel]
packages = ["src/coreason_ecosystem"]

[tool.deptry]
per_rule_ignores = {"DEP002" = ["click", "pulumi-aws", "pulumi-command"], "DEP003" = ["starlette"]}


[project.urls]
Homepage = "https://github.com/CoReason-AI/coreason_ecosystem"
Repository = "https://github.com/CoReason-AI/coreason_ecosystem"
Documentation = "https://github.com/CoReason-AI/coreason_ecosystem"

[tool.ruff]
line-length = 120
target-version = "py314"

[tool.ruff.format]
line-ending = "lf"

[tool.ruff.lint]
select = ["E", "F", "B", "I", "UP", "SIM", "RUF", "ARG", "C4", "PT", "TC", "FA", "PIE", "RET", "PERF", "FURB", "LOG", "N", "A", "S"]
ignore = ["S101", "TC001", "TC002", "TC003", "UP037", "ARG002"]

[tool.mypy]
python_version = "3.14"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
warn_unused_ignores = true
plugins = ["pydantic.mypy"]



[[tool.mypy.overrides]]
module = "opentelemetry.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pydantic_settings.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pulumi_command.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pulumi_proxmoxve.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "prometheus_client.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "lancedb.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pyarrow.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "mcp.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "fastapi.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "starlette.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "networkx.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "coreason_ecosystem.gateway.master_mcp",
]
warn_unused_ignores = false
disallow_untyped_decorators = false

[tool.ruff.lint.isort]
known-first-party = ["coreason_ecosystem"]

[tool.pytest.ini_options]
addopts = "-v --cov=coreason_ecosystem --cov-report=term-missing --cov-report=html --cov-fail-under=0"
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
    "raise NotImplementedError",
    "\\.\\.\\."
]

[tool.hatch.version]
source = "vcs"


[tool.codespell]
ignore-words-list = "wit,WIT"

[tool.pyright]
include = ["src", "tests", "infrastructure"]
extraPaths = ["."]
