[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "coreason_ecosystem"
dynamic = ["version"]
description = "The CoReason AI Swarm Ecosystem Integration Wrapper and Execution Plane"
readme = "README.md"
requires-python = "==3.14.*"
authors = [
    { name = "Gowtham A Rao", email = "gowtham.rao@coreason.ai" },
]
dependencies = [
    "coreason-manifest @ git+https://github.com/CoReason-AI/coreason-manifest.git@v0.75.0",
    "click>=8.1.7",
    "loguru>=0.7.2",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp-proto-http>=1.20.0",
    "cryptography>=44.0.0",
    "temporalio>=1.9.0",
    "mcp>=1.27.0",
    "fastapi>=0.135.3",
    "pyyaml>=6.0.2",
    "onnxruntime>=1.26.0",  # Transitive via sentence-transformers; kept for ONNX backend
    "pyarrow>=24.0.0",
    "sentence-transformers>=4.1.0",
    "semantic-router>=0.1.1",
    "numpy>=2.4.4",
    "skypilot>=0.6.2",
    "hvac>=2.4.0",
    "pyjwt>=2.12.1",
    "requests>=2.34.0",
    "nats-py>=2.9.0",
]

license = { file = "LICENSE" }
classifiers = [
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
vectordb = [
]

[project.scripts]
coreason-ecosystem = "coreason_ecosystem.cli:main"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.14.14",
    "pre-commit>=4.5.1",
    "pytest-cov>=7.0.0",
    "zensical",
    "mypy>=1.19.1",
    "pytest-asyncio",
    "pytest-benchmark",
    "deptry",
    "deepdiff",
    "hypothesis",
    "syrupy",
    "mkdocstrings-python",
    "mkdocs-material",
    "types-pyyaml>=6.0.12.20250915",
    "tzdata>=2025.3",
    "pytest-xdist>=3.6.1",
    "pandas-stubs>=3.0.0.260204",
    "pandas>=2.0.0",
    "types-protobuf>=6.32.1.20260221",
    "respx>=0.23.1",
    "types-hvac",
]

[tool.hatch.build.targets.wheel]
packages = ["src/coreason_ecosystem"]

[tool.deptry]
exclude = ["venv", "\\.venv", "tests", "infrastructure"]
known_first_party = ["coreason_ecosystem"]
per_rule_ignores = {"DEP002" = ["click", "onnxruntime"], "DEP003" = ["starlette", "coreason_ecosystem"]}


[project.urls]
Homepage = "https://github.com/CoReason-AI/coreason_ecosystem"
Repository = "https://github.com/CoReason-AI/coreason_ecosystem"
Documentation = "https://github.com/CoReason-AI/coreason_ecosystem"

[tool.ruff]
line-length = 120
target-version = "py314"

[tool.ruff.format]
line-ending = "lf"

[tool.ruff.lint]
select = ["E", "F", "B", "I", "UP", "SIM", "RUF", "ARG", "C4", "PT", "TC", "FA", "PIE", "RET", "PERF", "FURB", "LOG", "N", "A", "S"]
ignore = ["S101", "TC001", "TC002", "TC003", "UP037", "ARG002"]

[tool.mypy]
python_version = "3.14"
exclude = ["^infrastructure/"]
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
warn_unused_ignores = true
plugins = ["pydantic.mypy"]



[[tool.mypy.overrides]]
module = "opentelemetry.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pydantic_settings.*"
ignore_missing_imports = true


[[tool.mypy.overrides]]
module = "prometheus_client.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pyarrow.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "mcp.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "fastapi.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "starlette.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "sky.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "networkx.*"
ignore_missing_imports = true


[tool.ruff.lint.isort]
known-first-party = ["coreason_ecosystem"]

[tool.pytest.ini_options]
addopts = "-v --cov=coreason_ecosystem --cov-report=term-missing --cov-report=html --cov-fail-under=0"
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
    "raise NotImplementedError",
    "\\.\\.\\."
]

[tool.hatch.version]
source = "vcs"


[tool.codespell]
ignore-words-list = "wit,WIT"

[tool.pyright]
include = ["src", "tests", "infrastructure"]
extraPaths = ["."]




[tool.hatch.metadata]
allow-direct-references = true


